--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="buttons">
 				<img src="images/deckback.jpg" alt="deck of cards" id="deal">
         <em>click to pull cards (up to 7)</em>
-				<input type="button" value="SHUFFLE" id="shuffle" />
+				<input type="button" value="shuffle" id="shuffle" />
 			</div>
 			<div id="hand">
 			</div>
